[ADD] Variaveis passadas do controller diretamente para o template;
Signed-off-by: Edwino Stein <edwino@m2smart.com.br>

--- a/Application/View/Layout.phtml
+++ b/Application/View/Layout.phtml
@@ -5,6 +5,7 @@
         <?=$this->getTitle() ?>
     </head>
     <body>
+    <?= $this->getVariable('title')?>
     <?= $this->getView() ?>
     </body>
 </html>
